src/pages/search/mobile/mobile.module.scss
.container {
  background-color: #f3f3f3;
  min-height: 100vh;
}

.header {
  position: sticky;
  top: 0;
  background-color: white;
}

.searchBox {
  padding: 0 1rem;
  display: grid;
  align-items: end;
  padding-bottom: 1rem;
  grid-template-columns: 44px 1fr;
  height: 8rem;
  border-bottom: 1px solid var(--border-gray-01);
}

.back {
  height: 2.25rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

.filterBar {
  height: 3.5rem;
  display: flex;
  align-items: center;
  justify-content: center;
  border-bottom: 1px solid var(--border-gray-01);
  position: sticky;
  top: 0;
  background-color: var(--color-off-white-01);
}

.filterBarContent {
  display: flex;
  gap: 0.25rem;
  max-width: 800px;
  min-width: 100%;
}

.results {
  color: var(--color-gray-02);
  background-color: transparent;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: var(--font-size-s);
}

.listContainer {
  padding: 1rem;
}

